Changes to the Nav

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>ACE-Music</title>
 </head>
 <body>
-    <section class="div1">
-        <span><img src="./media/information.png" class="info-image"/></span>
-        <span class="message">Important:</span>
-        <span class="reminder"><a href="#">Reminder on carriage of personal electronic devices</a></span>
-    </section>
+    <div class="div1">
+        <img src="./media/information.png" class="info-image"/>
+        <h5>Important:</h5>
+        <p><a href="#">Reminder on carriage of personal electronic devices</a></p>
+    </div>
       <nav>
         <div class="logo">
          <img src="./media/emirates-logo-badge.svg" alt="logo">
@@ -19,52 +19,214 @@
           <div class="menu-items">
             <ul>
               <li class="main-dropdown">
-                      <button class="dropbtn">BOOK</button>
+                      <label for="main-dropdown" class="book">
+                      <a href="#">BOOK
+                        <img src="./media/drop-icon.png" alt="drop-icon">
+                      </a>
+                      </label>
                       <div class="dropdown-content">
-                        <div> <a href="#">BOOK</a>
-                          <ul class="dropdown 1">
-                            <li> <a href="#link3">Link 3</a> </li>
-                            <li> <a href="#link4">Link 4</a> </li>
-                            <li> <a href="#link5">Link 5</a> </li>
+                        <div class="Sub-menu">
+                          <a href="#">Book</a>
+                        </div>
+                        <header><a href="#"><h1>Book flights</h1></a></header>
+                        <span><header><a href="#">Search for a flight</a></header></span>
+                        <div class="row">
+                          <ul class="dropdown-links">
+                            <li> <a href="#">Search for a flight</a> </li>
+                            <li> <a href="#">Flight schedules</a> </li>
+                            <li> <a href="#">Special offers</a> </li>
+                            <li> <a href="#">Best Fare Finder</a> </li>
                           </ul>
                         </div>
-                        <div> <a href="#">ABOUT BOOKING ONLINE</a>
-                          <ul class="dropdown 2">
-                            <li> <a href="#link3">Link 3</a> </li>
-                            <li> <a href="#link4">Link 4</a> </li>
-                            <li> <a href="#link5">Link 5</a> </li>
+                        <div class="row">
+                          <header><a href="#">Planning your trip</a></header>
+                            <ul class="dropdown-links">
+                              <li> <a href="#">Book your trip to Dubai</a> </li>
+                              <li> <a href="#">Book a hotel</a> </li>
+                              <li> <a href="#">Tours and activities</a> </li>
+                              <li> <a href="#">Book a holiday</a> </li>
+                            </ul>
+                          </div>
+                          <div class="row">
+                            <header><a href="#">Travel services</a></header>
+                            <ul class="dropdown-links">
+                              <li> <a href="#"></a>Meet & Greet</li>
+                              <li> <a href="#">Dubai Connect</a></li>
+                            </ul>
+                        </div>
+                        <div class="row">
+                            <header><a href="#">Book your trip to Dubai</a></header>
+                            <ul class="dropdown-links">
+                              <li> <a href="#">Book a hotel</a> </li>
+                              <li> <a href="#">Tours and activities</a> </li>
+                              <li> <a href="#">Book a holiday</a> </li>
+                            </ul>
+                        </div>
+                        <div class="row">
+                            <header><a href="#">Transportation</a></header>
+                            <ul class="dropdown-links">
+                              <li> <a href="#">Airport transfer</a> </li>
+                              <li> <a href="#">Book a car</a> </li>
+                              <li> <a href="#">Airline partners</a> </li>
+                            </ul>
+                        </div>
+                        <div class="Sub-menu">
+                          <a href="#">About booking online</a>
+                        </div>
+                        <header><a href="#"><h1>The Emirates App</h1></a></header>
+                        <span><header><a href="#">Seat selection</a></header></span>
+                        <ul class="dropdown-links">
+                          <li> <a href="#">Hold my fare</a> </li>
+                        </ul>
+                        <span><header><a href="#">The Emirates App</a></header></span>
+                        <div class="row">
+                          <header><a href="#">Book flights</a></header>
+                          <ul class="dropdown-links">
+                            <li> <a href="#">Search for a flight</a> </li>
+                            <li> <a href="#">Flight schedules</a> </li>
+                            <li> <a href="#">Special offers</a> </li>
+                            <li> <a href="#">Best Fare Finder</a> </li>
                           </ul>
+                        </div>
+                   </div>
+              </li>
+              <li class="main-dropdown">
+                    <label for="main-dropdown" class="man">
+                    <a href="#">MANAGE
+                      <img src="./media/drop-icon.png" alt="drop-icon">
+                    </a>
+                    </label>
+                    <div class="dropdown-content">
+                      <div class="Sub-menu">
+                        <a href="#">Book</a>
+                      </div>
+                      <header><a href="#"><h1>Book flights</h1></a></header>
+                      <span><header><a href="#">Search for a flight</a></header></span>
+                      <div class="row">
+                      <ul class="dropdown-links">
+                        <li> <a href="#">Search for a flight</a> </li>
+                        <li> <a href="#">Flight schedules</a> </li>
+                        <li> <a href="#">Special offers</a> </li>
+                        <li> <a href="#">Best Fare Finder</a> </li>
+                      </ul>
+                      </div>
+                    </div>
+              </li>
+              <li class="main-dropdown">
+                  <label for="main-dropdown" class="expe">
+                  <a href="#">EXPERIENCE
+                    <img src="./media/drop-icon.png" alt="drop-icon">
+                  </a>
+                  </label>
+                  <div class="dropdown-content">
+                    <div class="Sub-menu">
+                      <a href="#">Book</a>
+                    </div>
+                    <header><a href="#"><h1>Book flights</h1></a></header>
+                    <span><header><a href="#">Search for a flight</a></header></span>
+                    <div class="row">
+                    <ul class="dropdown-links">
+                      <li> <a href="#">Search for a flight</a> </li>
+                      <li> <a href="#">Flight schedules</a> </li>
+                      <li> <a href="#">Special offers</a> </li>
+                      <li> <a href="#">Best Fare Finder</a> </li>
+                    </ul>
+                  </div>
+                  <li class="main-dropdown">
+                    <label for="main-dropdown" class="where">
+                      <a href="#">WHERE WE FLY
+                       <img src="./media/drop-icon.png" alt="drop-icon">
+                      </a>
+                    </label>
+                    <div class="dropdown-content">
+                      <div class="Sub-menu">
+                        <a href="#">Book</a>
+                      </div>
+                      <header><a href="#"><h1>Book flights</h1></a></header>
+                      <span><header><a href="#">Search for a flight</a></header></span>
+                      <div class="row">
+                      <ul class="dropdown-links">
+                        <li> <a href="#">Search for a flight</a> </li>
+                        <li> <a href="#">Flight schedules</a> </li>
+                        <li> <a href="#">Special offers</a> </li>
+                        <li> <a href="#">Best Fare Finder</a> </li>
+                      </ul>
+                      </div>
+                    </div>
+                    </li>
+                        <li class="main-dropdown">
+                          <label for="main-dropdown" class="loyal">
+                          <a href="#">LOYALTY
+                            <img src="./media/drop-icon.png" alt="drop-icon">
+                          </a>
+                          </label>
+                          <div class="dropdown-content">
+                            <div class="Sub-menu">
+                              <a href="#">Book</a>
+                            </div>
+                            <header><a href="#"><h1>Book flights</h1></a></header>
+                            <span><header><a href="#">Search for a flight</a></header></span>
+                            <div class="row">
+                            <ul class="dropdown-links">
+                              <li> <a href="#">Search for a flight</a> </li>
+                              <li> <a href="#">Flight schedules</a> </li>
+                              <li> <a href="#">Special offers</a> </li>
+                              <li> <a href="#">Best Fare Finder</a> </li>
+                            </ul>
+                            </div>
+                          </div>
+                    </li>
+                    <li class="main-dropdown">
+                      <label for="main-dropdown" class="help">
+                      <a href="#">HELP
+                        <img src="./media/drop-icon.png" alt="drop-icon">
+                      </a>
+                      </label>
+                      <div class="dropdown-content">
+                        <div class="Sub-menu">
+                          <a href="#">Book</a>
+                        </div>
+                        <header><a href="#"><h1>Book flights</h1></a></header>
+                        <span><header><a href="#">Search for a flight</a></header></span>
+                        <div class="row">
+                        <ul class="dropdown-links">
+                          <li> <a href="#">Search for a flight</a> </li>
+                          <li> <a href="#">Flight schedules</a> </li>
+                          <li> <a href="#">Special offers</a> </li>
+                          <li> <a href="#">Best Fare Finder</a> </li>
+                        </ul>
                         </div>
                       </div>
-              </li>
-
-              <li class="main-dropdown">
-                  <button class="dropbtn">MANAGE</button>
-              </li>
-              <li class="main-dropdown">
-                  <button class="dropbtn">EXPERIENCE</button>
-              </li>
-              <li class="main-dropdown">
-                  <button class="dropbtn">WHERE WE FLY</button>
-              </li>
-              <li class="main-dropdown">
-                  <button class="dropbtn">LOYALTY</button>
-              </li>
-              <li class="main-dropdown">
-                  <button class="dropbtn">HELP</button>
-              </li>
-          </ul>
+                    </li>
+                </ul>
+            </div>
           </div>
+          <!--Side Display On Bigger Screens-->
           <div class="other-links">
             <ul>
               <li>
                 <a href="#"><img src="./media/globe.png" />NG</a>
               </li>
               <li>
-                <a href="#"><img src="./media/search.png" /></a>
+                <a href="#"><img src="./media/search.png" /></a></span>
               </li>
               <li>
                 <a href="#"><img src="./media/user.jpg" /><nobr>LOG IN</nobr></a>
+              </li>
+            </ul>
+          </div>
+          
+          <!--Side Display On Smaller Screens-->
+          <div class="small-screen">
+            <ul>
+              <li>
+                <a href="#"><img src="./media/globe.png" />NG</a>
+              </li>
+              <li>
+                <a href="#"><img src="./media/user.jpg" /><nobr>LOG IN</nobr></a>
+              </li>
+              <li>
+                <a href="#">Menu</a>
               </li>
             </ul>
           </div>
