Added the footer

--- a/signup.html
+++ b/signup.html
@@ -231,7 +231,7 @@
         </ul>
       </div>
    </nav>
-
+     <!-- sign up link -->
    <div class="signUp-link">
     <ul >
          <li>Emirates Skywards <i class="fa fa-circle" style="font-size: 4px"></i></li>
