Adjust the footer signUp page

--- a/signup.html
+++ b/signup.html
@@ -373,9 +373,12 @@
 
 
 <div class="footer-login">
-  <a href=""  >Emirates </a> <i class="fa fa-chevron-right"></i>
+  <div class="footer-login-text">
+    <a href=""  >Emirates </a> <i class="fa fa-chevron-right"></i>
   <a href="">Emirates Skywards</a> <i class="fa fa-chevron-right"></i>
  <p>Skywards Registration</p> 
+  </div>
+  
 
 </div>
 
